refactor: Production-level code improvements - logging, security, validation, clean architecture
Made-with: Cursor